<resources>
    <string name="app_name">DiMoS</string>

    <string name="dismiss">dismiss</string>
    <string name="network_not_available">Network not available, please check your network connection.</string>
    <string name="SIGNING_IN">Signing in&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="PLEASE_WAIT">Please Wait&#8230;</string>
    <string name="login_fail_try_again">Login fail, please try again with correct login details.</string>
    <string name="MOBILE_NUMBER_SHOULD_NOT_BE_EMPTY">Mobile number should not be empty.</string>
    <string name="INVALID_MOBILE_NUMBER">Invalid mobile number.</string>
    <string name="PASSWORD_SHOULD_NOT_BE_EMPTY">Password should not be empty.</string>
    <string name="file_uploading_progress">Uploading in progress</string>
    <string name="notification_message">Don\'t close the app.</string>
    <string name="file_uploading_complited">Uploading to server done </string>
    <string name="file_uploading_complited_message">Total uploaded files :&#160; </string>
    <string name="PLEASE_ENTER_NAME"> Please enter the name.</string>
    <string name="please_wait">Please wait</string>
    <string name="registration_fail">Registration fail, please try again.</string>
    <string name="phone">Mobile Number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="action_right_drawer">Right Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="server_error">Faild to fetch data, please try again.</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Mobile number and Username to reset your password.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">User Name</string>
    <string name="btn_forgot_password">Forgot your password?</string>

    <string name="product_list">Product List</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="name">Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="view">View</string>
    <string name="action">Action</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="remove">Remove</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="shop">Shop</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

</resources>
