<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whitetextcolor"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"
        android:orientation="vertical">

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_margin="16dp"-->
<!--            android:src="@drawable/logo" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/Black"
            android:backgroundTint="@color/Black"
            android:textColorHint="@color/Black"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextname"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:textColor="@color/hederbackground"
                android:textColorHint="@color/hederbackground"
                android:padding="10sp"

                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/Black"
            android:backgroundTint="@color/Black"
            android:textColorHint="@color/Black"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextmobile"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/edittext_border"
                android:textColor="@color/hederbackground"
                android:textColorHint="@color/hederbackground"
                android:padding="10sp"
                android:hint="@string/phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/Black"
            android:backgroundTint="@color/Black"
            android:textColorHint="@color/Black"
            android:layout_marginTop="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextpassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:textColor="@color/hederbackground"
                android:textColorHint="@color/hederbackground"
                android:padding="10sp"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttongenerateotp"
            style="@style/DefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/view_dropshadow2"
            android:textColor="@color/whitetextcolor"
            android:layout_weight="1"
            android:text="Generate OTP" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/Black"
            android:backgroundTint="@color/Black"
            android:textColorHint="@color/Black"
            android:layout_marginTop="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextenterotp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext_border"
                android:textColor="@color/hederbackground"
                android:textColorHint="@color/hederbackground"
                android:hint="Enter OTP" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txttermsandconditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="Terms and Conditions !"
            android:textSize="14dp"
            android:textColor="#0000A0"
         />

        <Button
            android:id="@+id/buttonsubmit"
            style="@style/DefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/view_dropshadow2"
            android:textColor="@color/whitetextcolor"

            android:text="@string/register" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/back_to_login"
            android:textColor="@color/input_register_hint" />
    </LinearLayout>
</ScrollView>
